Adds internationalization support for Settings

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,13 @@
 {
   "select_language": "Select Language",
   "home": { "startNow": "Start Now" },
+  "common": {
+    "requiredField": "This field is required.",
+    "invalidData": "Invalid data",
+    "invalidUrl": "Invalid URL",
+    "cancel": "Cancel",
+    "confirm": "Confirm"
+  },
   "condition": {
     "noPersonalInfo": "We never collect keys, addresses, transactions, balances, hashes, or any personal information",
     "noIP": "We never collect your full IP address",
@@ -143,5 +150,193 @@
     "createAccountSuccess": "Create account successfully!",
     "createAccountFail": "Failed to create account",
     "copied": "Copied!"
+  },
+  "signIn": {
+    "loginTitle": "Login to your account",
+    "passwordPlaceholder": "Input Password",
+    "passwordTitle": "Password",
+    "signInButton": "Sign In",
+    "invalidPassword": "Invalid Password",
+    "required": "This field is required.",
+    "minLength": "Password should be minimum 8 characters.",
+    "maxLength": "Password should be maximum 256 characters.",
+    "initWalletError": "Error initializing wallet"
+  },
+  "settings": {
+    "contacts": "Contacts",
+    "contactsDesc": "Manage your contacts",
+    "networks": "Networks",
+    "networksDesc": "Add or edit custom RPC networks",
+    "connectedSites": "Connected Sites",
+    "connectedSitesDesc": "View and manage connected sites",
+    "walletConnect": "Wallet Connect",
+    "walletConnectDesc": "Connect with WalletConnect",
+    "txSettings": "Transaction Settings",
+    "txSettingsDesc": "Set your gas preferences",
+    "exportPhrase": "Export Recovery Phrase",
+    "exportPhraseDesc": "Protect your wallet",
+    "editPassword": "Edit Password",
+    "editPasswordDesc": "Change your wallet password",
+    "2fa": "2FA",
+    "2faDesc": "Manage two-factor authentication",
+    "expandView": "Expand View",
+    "expandViewDesc": "Open eckoWALLET in a new window",
+    "theme": "Theme",
+    "themeDesc": "Set Wallet Theme",
+    "lock": "Lock Wallet",
+    "lockDesc": "Protect your wallet",
+    "lockSettings": "Lock Wallet Settings",
+    "lockSettingsDesc": "Change security settings",
+    "discord": "Join us on Discord",
+    "website": "Visit our website",
+    "terms": "Terms of use",
+    "privacy": "Privacy Policy",
+    "connectedSitesPage": {
+      "title": "Connected Sites",
+      "removeSiteTitle": "Remove site",
+      "removeSiteConfirmText": "Are you sure you want to remove",
+      "removeSiteSuccess": "Site removed successfully."
+    },
+    "contactsPage": {
+      "title": "Contacts",
+      "newContactTitle": "New account",
+      "addNewContact": "Add New Contact",
+      "noContacts": "No contacts"
+    },
+    "contactForm": {
+      "enterAlias": "Enter An Alias",
+      "aliasPlaceholder": "e.g David",
+      "accountNameTitle": "Account Name",
+      "accountNamePlaceholder": "Account name",
+      "scanQrTitle": "Scan QR Code",
+      "scanQrDescription": "Place the QR code in front of your camera",
+      "buttonCancel": "Cancel",
+      "buttonSave": "Save",
+      "successContactAdded": "Contact Added",
+      "errorNetwork": "Network error.",
+      "copied": "Copied!",
+      "requiredField": "This field is required.",
+      "invalidData": "Invalid data",
+      "aliasMaxLength": "Enter an alias should be maximum 256 characters.",
+      "accountNameMaxLength": "Account name should be maximum 1000 characters."
+    },
+    "contactInfo": {
+      "copied": "Copied!",
+      "contactRemoved": "Contact Removed",
+      "accountName": "ACCOUNT NAME",
+      "editContact": "Edit Contact",
+      "editTitle": "Edit account",
+      "delete": "Delete",
+      "deleteContactTitle": "Delete contact",
+      "removeContact": "Remove Contact?",
+      "confirmRemove": "Are you sure you want to remove this contact?",
+      "cancel": "Cancel",
+      "confirm": "Confirm"
+    },
+    "editPasswordPage": {
+      "title": "Edit Password",
+      "passwordChanged": "Password modified successfully",
+      "cannotUpdatePassword": "Cannot update password",
+      "save": "Save"
+    },
+    "seedPhraseRetrivier": {
+      "enterPassword": "Enter your password to continue",
+      "inputPlaceholder": "Input password",
+      "password": "Password",
+      "errorRequired": "This field is required.",
+      "errorInvalid": "Invalid Passwords.",
+      "continue": "Continue",
+      "correctPassword": "Your password is correct, please wait..."
+    },
+    "exportSeedPhrase": {
+      "title": "Export Recovery Phrase",
+      "copied": "Copied!",
+      "description": "Your Secret Recovery Phrase makes it easy to back up and restore your account.",
+      "warning": "Never disclose your Secret Recovery Phrase. Anyone with this phrase can take your wallet forever.",
+      "copyKeyphrase": "Copy Keyphrase",
+      "download": "Download"
+    },
+    "lockSettingsPage": {
+      "title": "Wallet AutoLock Settings",
+      "saved": "Settings saved successfully",
+      "required": "This field is required.",
+      "placeholder": "Select Auto Lock Time",
+      "selectTitle": "Auto Lock Time",
+      "restore": "Restore default",
+      "save": "Save"
+    },
+    "networksPage": {
+      "title": "Networks",
+      "network": "Network",
+      "addNew": "Add New Network",
+      "editSuccess": "Network edited successfully",
+      "addSuccess": "Network added successfully",
+      "errorUrl": "URL already exists",
+      "deleteSuccess": "Network deleted successfully",
+      "remove": "Remove",
+      "save": "Save",
+      "confirmRemove": "Remove this Network?",
+      "confirmRemoveDesc": "Are you sure you want to remove this network?",
+      "placeholderName": "Insert Network Name",
+      "placeholderUrl": "Insert New RPC URL",
+      "placeholderExplorer": "Insert Block Explorer URL",
+      "placeholderNetworkId": "Insert Network ID",
+      "titleName": "Network Name",
+      "titleUrl": "New RPC URL",
+      "titleExplorer": "Block Explorer URL",
+      "titleNetworkId": "Network ID",
+      "nameMax": "Network name should be maximum 1000 characters.",
+      "urlMax": "New RPC URL should be maximum 1000 characters.",
+      "explorerMax": "Block Explorer URL should be maximum 1000 characters.",
+      "networkIdMax": "Network ID should be maximum 1000 characters."
+    },
+    "selectTheme": {
+      "title": "Select Theme"
+    },
+    "txSettingsPage": {
+      "title": "Transaction Settings",
+      "gasLimit": "Gas Limit",
+      "gasLimitPlaceholder": "Insert Gas Limit",
+      "finishCrossChain": "Finish Crosschain Gas Station",
+      "finishCrossChainPlaceholder": "Insert Crosschain Gas Station",
+      "crossChainGasLimit": "Crosschain Gas Limit",
+      "crossChainGasLimitPlaceholder": "Insert Crosschain Gas Limit",
+      "crossChainGasPrice": "Crosschain Gas Price",
+      "crossChainGasPricePlaceholder": "Insert Crosschain Gas Price",
+      "save": "Save",
+      "restoreDefault": "Restore Default",
+      "successSave": "Settings saved successfully",
+      "requiredField": "This field is required.",
+      "invalidValue": "Invalid value"
+    },
+    "2faPage": {
+      "title": "Two-Factor Authentication",
+      "description": "Two-Factor Authentication is already set up.",
+      "disableButton": "Disable",
+      "successDisable": "2FA removed successfully",
+      "installApp": "Install",
+      "orSimilar": "or similar apps",
+      "scanQRCode": "Scan the QR code below:",
+      "enter6Digits": "Enter the 6-digit code",
+      "invalidCode": "The code is not valid.",
+      "saveButton": "Save",
+      "setupSuccess": "2FA set up successfully"
+    },
+    "walletConnectPage": {
+      "title": "Wallet Connect",
+      "selectAccounts": "Select accounts",
+      "invalidUrl": "Invalid URL",
+      "disconnectSuccess": "Disconnect request sent successfully",
+      "noActiveSessions": "NO ACTIVE SESSIONS",
+      "activeSessions": "ACTIVE SESSIONS",
+      "expiry": "Expiry:",
+      "removeConnection": "Remove Connection",
+      "removeConfirmation": "Are you sure you want to remove this WalletConnect instance?",
+      "newConnection": "New connection",
+      "addConnection": "Add new Wallet Connect",
+      "inputUri": "Input URI",
+      "code": "Code",
+      "continue": "Continue"
+    }
   }
 }
