--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -1,6 +1,13 @@
 {
   "select_language": "Seleziona Lingua",
   "home": { "startNow": "Inizia Ora" },
+  "common": {
+    "requiredField": "Questo campo è obbligatorio.",
+    "invalidData": "Dato non valido",
+    "invalidUrl": "URL non valido",
+    "cancel": "Cancella",
+    "confirm": "Conferma"
+  },
   "condition": {
     "noPersonalInfo": "Non raccogliamo mai chiavi, indirizzi, transazioni, saldi, hash o qualsiasi informazione personale",
     "noIP": "Non raccogliamo mai il tuo indirizzo IP completo",
@@ -143,5 +150,193 @@
     "createAccountSuccess": "Account creato con successo!",
     "createAccountFail": "Errore nella creazione dell'account",
     "copied": "Copiato!"
+  },
+  "signIn": {
+    "loginTitle": "Accedi al tuo account",
+    "passwordPlaceholder": "Inserisci la password",
+    "passwordTitle": "Password",
+    "signInButton": "Accedi",
+    "invalidPassword": "Password non valida",
+    "required": "Questo campo è obbligatorio.",
+    "minLength": "La password deve contenere almeno 8 caratteri.",
+    "maxLength": "La password deve contenere massimo 256 caratteri.",
+    "initWalletError": "Errore nell'inizializzazione del wallet"
+  },
+  "settings": {
+    "contacts": "Contatti",
+    "contactsDesc": "Gestisci i tuoi contatti",
+    "networks": "Reti",
+    "networksDesc": "Aggiungi o modifica reti RPC personalizzate",
+    "connectedSites": "Siti collegati",
+    "connectedSitesDesc": "Visualizza e gestisci i siti collegati",
+    "walletConnect": "Wallet Connect",
+    "walletConnectDesc": "Connettiti con WalletConnect",
+    "txSettings": "Impostazioni Transazioni",
+    "txSettingsDesc": "Imposta le preferenze per il gas",
+    "exportPhrase": "Esporta Frase di Recupero",
+    "exportPhraseDesc": "Proteggi il tuo wallet",
+    "editPassword": "Modifica Password",
+    "editPasswordDesc": "Cambia la password del wallet",
+    "2fa": "Autenticazione 2FA",
+    "2faDesc": "Gestisci l'autenticazione a due fattori",
+    "expandView": "Vista Estesa",
+    "expandViewDesc": "Apri eckoWALLET in una nuova finestra",
+    "theme": "Tema",
+    "themeDesc": "Imposta il tema del wallet",
+    "lock": "Blocca Wallet",
+    "lockDesc": "Proteggi il tuo wallet",
+    "lockSettings": "Impostazioni Blocco",
+    "lockSettingsDesc": "Modifica le impostazioni di sicurezza",
+    "discord": "Unisciti a noi su Discord",
+    "website": "Visita il nostro sito web",
+    "terms": "Termini di utilizzo",
+    "privacy": "Informativa sulla privacy",
+    "connectedSitesPage": {
+      "title": "Siti Collegati",
+      "removeSiteTitle": "Rimuovi sito",
+      "removeSiteConfirmText": "Sei sicuro di voler rimuovere",
+      "removeSiteSuccess": "Sito rimosso con successo."
+    },
+    "contactsPage": {
+      "title": "Contatti",
+      "newContactTitle": "Nuovo account",
+      "addNewContact": "Aggiungi nuovo contatto",
+      "noContacts": "Nessun contatto"
+    },
+    "contactForm": {
+      "enterAlias": "Inserisci un alias",
+      "aliasPlaceholder": "es. Davide",
+      "accountNameTitle": "Nome Account",
+      "accountNamePlaceholder": "Nome account",
+      "scanQrTitle": "Scansiona QR Code",
+      "scanQrDescription": "Posiziona il QR code davanti alla fotocamera",
+      "buttonCancel": "Annulla",
+      "buttonSave": "Salva",
+      "successContactAdded": "Contatto aggiunto",
+      "errorNetwork": "Errore di rete.",
+      "copied": "Copiato!",
+      "requiredField": "Questo campo è obbligatorio.",
+      "invalidData": "Dato non valido",
+      "aliasMaxLength": "L'alias deve avere massimo 256 caratteri.",
+      "accountNameMaxLength": "Il nome account deve avere massimo 1000 caratteri."
+    },
+    "contactInfo": {
+      "copied": "Copiato!",
+      "contactRemoved": "Contatto rimosso",
+      "accountName": "NOME ACCOUNT",
+      "editContact": "Modifica Contatto",
+      "editTitle": "Modifica",
+      "delete": "Elimina",
+      "deleteContactTitle": "Elimina Contatto",
+      "removeContact": "Rimuovere Contatto?",
+      "confirmRemove": "Sei sicuro di voler rimuovere questo contatto?",
+      "cancel": "Annulla",
+      "confirm": "Conferma"
+    },
+    "editPasswordPage": {
+      "title": "Modifica Password",
+      "passwordChanged": "Password modificata con successo",
+      "cannotUpdatePassword": "Impossibile aggiornare la password",
+      "save": "Salva"
+    },
+    "seedPhraseRetrivier": {
+      "enterPassword": "Inserisci la tua password per continuare",
+      "inputPlaceholder": "Inserisci password",
+      "password": "Password",
+      "errorRequired": "Questo campo è obbligatorio.",
+      "errorInvalid": "Password non valida.",
+      "continue": "Continua",
+      "correctPassword": "La tua password è corretta, attendere..."
+    },
+    "exportSeedPhrase": {
+      "title": "Esporta Frase di Recupero",
+      "copied": "Copiato!",
+      "description": "La tua Frase di Recupero ti consente di eseguire facilmente il backup e il ripristino del tuo account.",
+      "warning": "Non divulgare mai la tua Frase di Recupero. Chiunque la possieda può rubare il tuo portafoglio per sempre.",
+      "copyKeyphrase": "Copia Frase",
+      "download": "Scarica"
+    },
+    "lockSettingsPage": {
+      "title": "Impostazioni di Blocco Automatico",
+      "saved": "Impostazioni salvate con successo",
+      "required": "Questo campo è obbligatorio.",
+      "placeholder": "Seleziona Tempo di Blocco Automatico",
+      "selectTitle": "Tempo di Blocco Automatico",
+      "restore": "Ripristina default",
+      "save": "Salva"
+    },
+    "networksPage": {
+      "title": "Reti",
+      "network": "Rete",
+      "addNew": "Aggiungi Nuova Rete",
+      "editSuccess": "Rete modificata con successo",
+      "addSuccess": "Rete aggiunta con successo",
+      "errorUrl": "URL già esistente",
+      "deleteSuccess": "Rete eliminata con successo",
+      "remove": "Rimuovi",
+      "save": "Salva",
+      "confirmRemove": "Rimuovere questa rete?",
+      "confirmRemoveDesc": "Sei sicuro di voler rimuovere questa rete?",
+      "placeholderName": "Inserisci il nome della rete",
+      "placeholderUrl": "Inserisci il nuovo URL RPC",
+      "placeholderExplorer": "Inserisci l'URL del block explorer",
+      "placeholderNetworkId": "Inserisci l'ID della rete",
+      "titleName": "Nome della Rete",
+      "titleUrl": "URL RPC",
+      "titleExplorer": "URL del Block Explorer",
+      "titleNetworkId": "ID della Rete",
+      "nameMax": "Il nome della rete deve essere al massimo di 1000 caratteri.",
+      "urlMax": "Il nuovo URL RPC deve essere al massimo di 1000 caratteri.",
+      "explorerMax": "L'URL del block explorer deve essere al massimo di 1000 caratteri.",
+      "networkIdMax": "L'ID della rete deve essere al massimo di 1000 caratteri."
+    },
+    "selectTheme": {
+      "title": "Seleziona Tema"
+    },
+    "txSettingsPage": {
+      "title": "Impostazioni Transazioni",
+      "gasLimit": "Limite Gas",
+      "gasLimitPlaceholder": "Inserisci Limite Gas",
+      "finishCrossChain": "Gas Station Crosschain",
+      "finishCrossChainPlaceholder": "Inserisci Gas Station Crosschain",
+      "crossChainGasLimit": "Limite Gas Crosschain",
+      "crossChainGasLimitPlaceholder": "Inserisci Limite Gas Crosschain",
+      "crossChainGasPrice": "Prezzo Gas Crosschain",
+      "crossChainGasPricePlaceholder": "Inserisci Prezzo Gas Crosschain",
+      "save": "Salva",
+      "restoreDefault": "Ripristina Predefinito",
+      "successSave": "Impostazioni salvate con successo",
+      "requiredField": "Questo campo è obbligatorio.",
+      "invalidValue": "Valore non valido"
+    },
+    "2faPage": {
+      "title": "Autenticazione a Due Fattori",
+      "description": "L'autenticazione a due fattori è già configurata.",
+      "disableButton": "Disabilita",
+      "successDisable": "2FA disabilitata con successo",
+      "installApp": "Installa",
+      "orSimilar": "o app simili",
+      "scanQRCode": "Scansiona il codice QR qui sotto:",
+      "enter6Digits": "Inserisci il codice di 6 cifre",
+      "invalidCode": "Il codice non è valido.",
+      "saveButton": "Salva",
+      "setupSuccess": "2FA configurata con successo"
+    },
+    "walletConnectPage": {
+      "title": "Wallet Connect",
+      "selectAccounts": "Seleziona account",
+      "invalidUrl": "URL non valido",
+      "disconnectSuccess": "Richiesta di disconnessione inviata con successo",
+      "noActiveSessions": "NESSUNA SESSIONE ATTIVA",
+      "activeSessions": "SESSIONI ATTIVE",
+      "expiry": "Scadenza:",
+      "removeConnection": "Rimuovi Connessione",
+      "removeConfirmation": "Sei sicuro di voler rimuovere questa istanza di WalletConnect?",
+      "newConnection": "Nuova connessione",
+      "addConnection": "Aggiungi nuovo Wallet Connect",
+      "inputUri": "Inserisci URI",
+      "code": "Codice",
+      "continue": "Continua"
+    }
   }
 }
