--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -6,7 +6,12 @@
     "invalidData": "Dato non valido",
     "invalidUrl": "URL non valido",
     "cancel": "Cancella",
-    "confirm": "Conferma"
+    "confirm": "Conferma",
+    "continue": "Continua",
+    "reject": "Rifiuta",
+    "usd": "{{value}} USD",
+    "next": "Avanti",
+    "close": "Chiudi"
   },
   "condition": {
     "noPersonalInfo": "Non raccogliamo mai chiavi, indirizzi, transazioni, saldi, hash o qualsiasi informazione personale",
@@ -338,5 +343,299 @@
       "code": "Codice",
       "continue": "Continua"
     }
+  },
+  "buy": {
+    "title": "Acquista",
+    "description": "L'acquisto e la vendita di criptovalute sono gestiti tramite un servizio di terze parti fornito da Onramper.\n\nAnche se eckoWallet si impegna a garantire il massimo livello di sicurezza per i suoi utenti, non può garantire la sicurezza e la privacy dei servizi di terze parti.",
+    "cancel": "Annulla",
+    "confirm": "Conferma",
+    "error": {
+      "noAddress": "Indirizzo del wallet non disponibile",
+      "generic": "Impossibile connettersi al servizio. Riprova più tardi."
+    }
+  },
+  "analytics": {
+    "walletAnalytics": "ANALISI WALLET",
+    "dexAnalytics": "ANALISI DEX",
+    "portfolioValue": "GRAFICO VALORE PORTAFOGLIO",
+    "startTracking": "Inizia il monitoraggio",
+    "trackPortfolioTitle": "Monitora il valore del portafoglio",
+    "trackPortfolioStart": "AVVIA MONITORAGGIO SALDO ACCOUNT",
+    "trackPortfolioDesc1": "Confermandolo, autorizzi l'avvio del monitoraggio del saldo del tuo account.",
+    "trackPortfolioDesc2": "Procedere?",
+    "confirm": "Conferma",
+    "confirming": "Conferma in corso, attendi...",
+    "disclaimerTitle": "Informazione!",
+    "disclaimerText": "Le informazioni mostrate in questa pagina sono attualmente in fase di test BETA e sono fornite \"così come sono\" e \"secondo disponibilità\"."
+  },
+  "dapps": {
+    "signedCmd": {
+      "invalidNetwork": "Rete non valida",
+      "signingCmdError": "Errore durante la firma del comando, controlla il payload",
+      "signingCmdGenericError": "Errore nella firma del comando",
+      "rejectedByUser": "Rifiutato dall’utente",
+      "userRejected": "Utente ha rifiutato.",
+      "signedCommand": "Comando firmato",
+      "hashToSign": "HASH DA FIRMARE:",
+      "pleaseEnableLedger": "Abilita BLIND SIGNING\n e segui le istruzioni sul tuo Ledger",
+      "capabilities": "Capabilities",
+      "close": "Chiudi",
+      "reject": "Rifiuta",
+      "confirm": "Conferma"
+    },
+    "quickSignCmd": {
+      "quickSignRequest": "Richiesta Quick Sign",
+      "code": "Codice",
+      "capabilities": "Capacità",
+      "rawData": "Dati Grezzi",
+      "command": "Comando {{index}}/{{total}}",
+      "hashToSign": "HASH DA FIRMARE ({{count}}/{{total}}):",
+      "ledgerInstructions": "Abilita BLIND SIGNING e segui le istruzioni sul tuo Ledger",
+      "close": "Chiudi",
+      "reject": "Rifiuta",
+      "confirm": "Conferma",
+      "error.invalidStructure": "Errore QuickSign: struttura dei dati non valida",
+      "error.pubKeyNotFound": "Errore QuickSign: chiave pubblica non trovata",
+      "error.ledger": "Errore nella firma con Ledger"
+    }
+  },
+  "hardware": {
+    "import": {
+      "title": "Importa wallet hardware",
+      "selectDevice": "Seleziona un wallet hardware",
+      "ledgerInstructions": "Collega il tuo Ledger al computer. Poi sbloccalo e apri l'app Kadena.",
+      "connect": "Connetti",
+      "confirm": "Importa",
+      "success": "Wallet hardware importato con successo",
+      "error": {
+        "duplicate": "L'account che stai cercando di importare è già presente.",
+        "network": "Errore di rete.",
+        "invalid": "Dati non validi"
+      }
+    }
+  },
+  "ledger": {
+    "import": {
+      "title": "Importa da Ledger",
+      "instruction": "Collega il tuo Ledger al computer, sbloccalo e apri l'app Kadena.",
+      "continue": "Continua",
+      "publicKey": "CHIAVE PUBBLICA",
+      "account": "ACCOUNT",
+      "confirm": "Conferma importazione",
+      "success": "Account importato con successo.",
+      "error": {
+        "duplicate": "L'account che stai cercando di importare è già presente.",
+        "network": "Errore di rete durante il recupero dei dati dell'account",
+        "invalid": "Dati non validi"
+      }
+    }
+  },
+  "token": {
+    "import": {
+      "title": "Importa Token",
+      "contractLabel": "Indirizzo del contratto del token",
+      "symbolLabel": "Simbolo del token",
+      "placeholder": {
+        "contract": "Inserisci l’indirizzo del contratto",
+        "symbol": "Inserisci il simbolo"
+      },
+      "add": "Aggiungi Token",
+      "edit": "Modifica Token",
+      "success": "Token salvato con successo",
+      "error": {
+        "duplicate": "Token già aggiunto",
+        "notFound": "Impossibile risolvere {{contract}}.details - Controlla che il token esista su {{network}}"
+      }
+    }
+  },
+  "importWallet": {
+    "header": "Importa Portafoglio",
+    "form": {
+      "accountName": {
+        "title": "Il tuo nome account",
+        "placeholder": "Nome account"
+      },
+      "chainId": {
+        "title": "ID Chain"
+      },
+      "secretKey": {
+        "title": "La tua chiave privata",
+        "placeholder": "Chiave privata"
+      }
+    },
+    "validation": {
+      "required": "Questo campo è obbligatorio.",
+      "invalidData": "Dati non validi",
+      "startsWithK": "Il nome dell'account deve iniziare con \"k:\"",
+      "accountName": {
+        "maxLength": "Il nome dell'account può contenere al massimo 1000 caratteri."
+      },
+      "secretKey": {
+        "maxLength": "La chiave privata può contenere al massimo 1000 caratteri."
+      }
+    },
+    "modal": {
+      "scanTitle": "Scansiona il Codice QR",
+      "scanBody": "Posiziona il codice QR davanti alla fotocamera"
+    },
+    "button": {
+      "import": "Importa portafoglio"
+    },
+    "toast": {
+      "importSuccess": "Account importato con successo.",
+      "duplicateError": "L'account che stai cercando di importare è un duplicato.",
+      "invalidAccountData": "Dati account non validi",
+      "multipleKeys": "Più set di chiavi non sono supportati",
+      "invalidData": "Dati non validi",
+      "networkError": "Errore di rete."
+    }
+  },
+  "initPage": {
+    "secondary": {
+      "existingKey": "Ho una chiave privata esistente.",
+      "prompt": "Importa la tua chiave privata esistente"
+    },
+    "button": {
+      "import": "Importa"
+    },
+    "image": {
+      "alt": "Icona di importazione"
+    }
+  },
+  "nft": {
+    "header": "I tuoi NFT",
+    "noOwned": "Nessun NFT posseduto"
+  },
+  "sendTransactions": {
+    "header": "Invia transazione {{symbol}}"
+  },
+  "popupConfirm": {
+    "ledgerSignSuccess": "Firma Ledger riuscita",
+    "ledgerSignFailed": "Firma Ledger fallita o annullata",
+    "transferSuccess": "Trasferimento avvenuto con successo",
+    "transferFailed": "Trasferimento fallito",
+    "transactionSent": "Transazione inviata con successo! Controlla lo stato nella cronologia",
+    "networkError": "Errore di rete.",
+    "loadingTop": "Per favore non chiudere questa vista",
+    "loadingBottom": "Verrai reindirizzato quando la transazione sarà terminata",
+    "labelReceiver": "Destinatario",
+    "labelAmount": "Importo",
+    "labelGasLimit": "Gas Limit",
+    "labelGasPrice": "Gas Price",
+    "labelGasFee": "Gas Fee",
+    "labelTotal": "Totale",
+    "warningCrossChainLine1": "Stai per effettuare un trasferimento cross-chain",
+    "warningCrossChainLine2": "Questa operazione di solito richiede più tempo",
+    "warningNonKAccountLine1": "Stai inviando a un account non “k:account”! ",
+    "warningNonKAccountLine2": "Sei sicuro di voler procedere?"
+  },
+  "selectReceiver": {
+    "notTransferable": "{{contractAddress}} non è trasferibile!",
+    "form": {
+      "sourceChainId": {
+        "title": "ID Chain di origine"
+      },
+      "destinationAccount": {
+        "title": "Account di destinazione"
+      },
+      "targetChainId": {
+        "title": "ID Chain di destinazione"
+      }
+    },
+    "validation": {
+      "maxDestinationAccount": "L'account di destinazione può contenere al massimo 1000 caratteri."
+    },
+    "balanceLabel": "Saldo {{symbol}} su Chain",
+    "recent": "RECENTI",
+    "contacts": "CONTATTI",
+    "confirm": {
+      "warningTitle": "Avviso",
+      "publicKeyTitle": "Chiave pubblica",
+      "publicKeyPlaceholder": "Inserisci chiave pubblica",
+      "predicateTitle": "Predicato",
+      "predicatePlaceholder": "Predicato"
+    }
+  },
+  "transfer": {
+    "cannotSendToYourself": "Impossibile inviare a te stesso",
+    "invalidGasLimit": "Limite gas non valido",
+    "gasLimitInteger": "Il limite gas deve essere un intero",
+    "invalidGasPrice": "Prezzo gas non valido",
+    "insufficientFundsGas": "Fondi insufficienti per la commissione gas",
+    "newAddressDetected": "Nuovo indirizzo rilevato! Aggiungi ai tuoi contatti",
+    "tokenNotExists": "{{contractAddress}} non esiste su CHAIN {{chainId}}!",
+    "transactionParameters": "Parametri transazione",
+    "estimatedGas": "Gas stimato {{gas}}",
+    "speed": "Velocità {{speed}}",
+    "modal": {
+      "confirmTitle": "Conferma invio transazione",
+      "gasParametersTitle": "Parametri transazione"
+    },
+    "form": {
+      "gasLimit": {
+        "title": "Gas Limit"
+      },
+      "gasPrice": {
+        "title": "Prezzo gas"
+      }
+    }
+  },
+  "cryptoAmountSelector": {
+    "labelAmountToSend": "Importo da inviare",
+    "button": {
+      "half": "METÀ",
+      "max": "MASSIMO"
+    },
+    "error": {
+      "insufficientFunds": "Fondi insufficienti",
+      "invalidAmount": "Importo non valido"
+    },
+    "balance": "Saldo: {{balance}} {{symbol}}"
+  },
+  "dappTransfer": {
+    "logoAlt": "Logo dapp",
+    "sendTransaction": "Invia transazione",
+    "destinationNotFound": "Account di destinazione non trovato"
+  },
+  "history": {
+    "header": "Cronologia",
+    "modal": {
+      "confirmSendTransaction": "Conferma invio transazione"
+    }
+  },
+  "activities": {
+    "detailsTitle": "Dettagli transazione"
+  },
+  "receiveModal": {
+    "accountNameTitle": "Nome account"
+  },
+  "activityList": {
+    "loading": "Caricamento in corso...",
+    "today": "Oggi",
+    "yesterday": "Ieri",
+    "noTransactions": "Non hai transazioni"
+  },
+  "statusFilter": {
+    "modalTitle": "Stato",
+    "prefix": "Stato: ",
+    "options": {
+      "all": "Tutti",
+      "in": "Ricevuti",
+      "out": "Inviati",
+      "pending": "In sospeso"
+    }
+  },
+  "tokenFilter": {
+    "modalTitle": "Token",
+    "prefix": "Asset: ",
+    "options": {
+      "all": "Tutti"
+    }
+  },
+  "footer": {
+    "wallet": "WALLET",
+    "analytics": "ANALYTICS",
+    "nft": "NFT",
+    "settings": "IMPOSTAZIONI"
   }
 }
